welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(x=true) {
       ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(x=true) {
^